--- a/lab9/LSH.ipynb
+++ b/lab9/LSH.ipynb
@@ -287,13 +287,7 @@
    "source": [
     "## TO DO\n",
     "\n",
-    "* Write a function that computes the distance between two input images. Use the l1-distance, i.e., the sum of absolute values of differences between pixels in the input images (which, by the way, coincides with the Hamming distance for the representation of images we have chosen).\n",
-    "\n",
-    "\n",
-    "* Write a function that implements brute-force search, namely, given an input image, compute its distance to all images in the dataset (well, the first 1500) and outputs the one that is closest to it together with the l1-distance value.\n",
-    "\n",
-    "\n",
-    "* Write a search function that, given an input image, uses the hashes to find the nearest neighbor. Namely, given an input image, invoke the `candidates` function provided, and return the closest image in the candidate set (together with the l1 distance). Notice that depending on the parameters k,m that you chose, you may have no candidates; in this case, your function should return None (python’s null value)."
+    "* Write a function that computes the distance between two input images. Use the l1-distance, i.e., the sum of absolute values of differences between pixels in the input images (which, by the way, coincides with the Hamming distance for the representation of images we have chosen)."
    ]
   },
   {
@@ -304,6 +298,13 @@
    "source": [
     "def L1distance(a, b):\n",
     "    return np.sum(np.abs(a-b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Write a function that implements brute-force search, namely, given an input image, compute its distance to all images in the dataset (well, the first 1500) and outputs the one that is closest to it together with the l1-distance value."
    ]
   },
   {
@@ -360,6 +361,13 @@
     "f2 = fig.add_subplot(1,2,2)\n",
     "f2.imshow(im, cmap=plt.cm.gray, interpolation=\"lanczos\")\n",
     "print(dist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Write a search function that, given an input image, uses the hashes to find the nearest neighbor. Namely, given an input image, invoke the `candidates` function provided, and return the closest image in the candidate set (together with the l1 distance). Notice that depending on the parameters k,m that you chose, you may have no candidates; in this case, your function should return None (python’s null value)."
    ]
   },
   {
@@ -469,6 +477,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# this function returns the index of the closest image to the one given and their distance\n",
+    "# the input image has to be the index of the dataset\n",
     "def brute_force_idx(index_image, data):\n",
     "    closest_image = None\n",
     "    min_distance = 1e6\n",
@@ -482,6 +492,8 @@
     "                index = i\n",
     "    return index, min_distance\n",
     "\n",
+    "# this function returns the index of the closest image to the given one (im_index)\n",
+    "# choosen from the candidates given\n",
     "def closest_of_a_set_idx(im_index, candidates, dataset):\n",
     "    closest_image_idx = 0\n",
     "    min_distance = 1e6\n",
@@ -506,16 +518,19 @@
    "outputs": [],
    "source": [
     "n_test_images = data.shape[0]-1500\n",
-    "test_idx = [i for i in range(1, n_test_images)]"
+    "test_idx = [i for i in range(1, n_test_images)] # the test set indexes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "K, M = 40, 15\n",
+    "K, M = 40, 15 # parametrization of LSH\n",
+    "\n",
+    "# this function computes for each test image the closest one with two methods and\n",
+    "# saves the time of computing and the distance obtained\n",
     "def compare_two_methods(indexes, dataset):\n",
     "    # first we create a the lsh object\n",
     "    times = {\"brute force\":[], \"hash\":[]}\n",
@@ -534,8 +549,8 @@
     "            hash_im, hash_d = hash_search(K, M, index, dataset, candidates)\n",
     "            hash_time_diff = int(round(time.time() * 1000)) - start_time\n",
     "        \n",
-    "            times[\"hash\"].append(hash_time_diff)\n",
     "            distances[\"hash\"].append(hash_d)\n",
+    "        times[\"hash\"].append(hash_time_diff)\n",
     "        #print(\"With image\", index, \"from the test set we obtain the next results:\")\n",
     "        #print(\"Brute force: dist:\", brute_d, \", index:\", brute_im, \", time:\", brute_time_diff)\n",
     "        #print(\"Hash method: dist:\", hash_d, \", index:\", hash_im, \", time:\", hash_time_diff)\n",
@@ -545,11 +560,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts, dsts  = compare_two_methods(test_idx, data)"
+    "ts, dsts = compare_two_methods(test_idx, data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now time to compare the results\n",
+    "First the number of unmatched images with LSH"
    ]
   },
   {
@@ -572,23 +595,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The total time spent with each method"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2782, 538)"
+       "(2733, 518)"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sum(ts[\"brute force\"]), sum(ts[\"hash\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To have a better idea of the results obtained we check the max of all the distances and the mean obtained with each method"
    ]
   },
   {
