--- a/lab10/Play-With-Data.ipynb
+++ b/lab10/Play-With-Data.ipynb
@@ -1788,6 +1788,134 @@
     "recom.sort(key=lambda x : -x[1])\n",
     "recom"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k, m = 3, 100\n",
+    "hashes = [dict() for _ in range(m)]\n",
+    "\n",
+    "np.random.seed(12345)\n",
+    "hashbits = np.random.randint(10, size=(m, k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hashcode(movie, i):\n",
+    "    \"\"\" get the i'th hash code of movie(0 <= i < m) \"\"\"\n",
+    "    ratings = list(_movie_ratings2[movie].items())\n",
+    "    ratings.sort(key=lambda x : -x[1])\n",
+    "\n",
+    "\n",
+    "    row = hashbits[i]\n",
+    "    str = \"\"\n",
+    "    for x in row:\n",
+    "        if x >= len(ratings):\n",
+    "            x = 0\n",
+    "        str += ratings[x][0]\n",
+    "    return str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k, m = 20, 1\n",
+    "hashes = [dict() for _ in range(m)]\n",
+    "\n",
+    "strlen = len(_user_ratings2) * 10 # 10 possible ratings\n",
+    "\n",
+    "np.random.seed(123)\n",
+    "hashbits = np.random.randint(strlen, size=(m, k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hashcode(movie, i):\n",
+    "    \"\"\" get the i'th hash code of movie(0 <= i < m) \"\"\"\n",
+    "    row = hashbits[i]\n",
+    "    str2 = \"\"\n",
+    "    for x in row:\n",
+    "        hash_user = x // 10\n",
+    "        hash_rating = x % 10\n",
+    "        if str(hash_user) not in _movie_ratings2[movie]:\n",
+    "            rating = 0\n",
+    "        else:\n",
+    "            rating = _movie_ratings2[movie][str(hash_user)]\n",
+    "\n",
+    "        if hash_rating < int(2*rating):\n",
+    "            str2 += '1'\n",
+    "        else:\n",
+    "            str2 += '0'\n",
+    "    return str2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def hash_all_movies():\n",
+    "    \"\"\" go through all movies and store them in hash table(s) \"\"\"\n",
+    "    for movie in _movie_ratings2.keys():\n",
+    "        for i in range(m):\n",
+    "            user = hashcode(movie, i)\n",
+    "\n",
+    "            # store it into the dictionary..\n",
+    "            # (well, the index not the whole array!)\n",
+    "            if user not in hashes[i]:\n",
+    "                hashes[i][user] = []\n",
+    "            hashes[i][user].append(movie)\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def candidates(movie):\n",
+    "    \"\"\" given movie, return set of indices of matching candidates \"\"\"\n",
+    "    res = set()\n",
+    "    for i in range(m):\n",
+    "        code = hashcode(movie, i)\n",
+    "        if code in hashes[i]:\n",
+    "            res.update(hashes[i][code])\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hash_all_movies()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(candidates('260'))"
+   ]
   }
  ],
  "metadata": {
@@ -1806,7 +1934,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
