ready to deliver

--- a/lab11/delivery/tasks.ipynb
+++ b/lab11/delivery/tasks.ipynb
@@ -119,6 +119,29 @@
     "plt.ylabel(\"Count of nodes\")\n",
     "plt.savefig(\"task3-hist.png\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's not much but it's honest work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = 2\n",
+    "n0 = 100\n",
+    "n = 20\n",
+    "degrees = []\n",
+    "for i in range(n):\n",
+    "    for d in Graph.Barabasi(n, m).degree():\n",
+    "        degrees.append(d)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
